Minor Site Cleanup

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -40,15 +40,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Version 2.0.2&#151;<b>E</b><b>xperimental</b><b> Maintenance Release</b>&#151;[<a href="distributions/dTV202exe.zip">Binary
-      Zipped</a>] [<a href="distributions/dTV202src.zip">Source Zipped</a>]<br>
+      <p>Version 2.0.2&#151;<b>Stable</b><b></b>&#151;[<a href="distributions/dTV202exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV202src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Windows 2000 driver code was
       broken.&nbsp; No other binary changes.<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Deleted unused temporary files from 2.0.2 source,
       so source zip is smaller than 2.0.1&nbsp;
       </p>
-      <p>Version 2.0.1&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV201exe.zip">Binary
-      Zipped</a>] [<a href="distributions/dTV201src.zip">Source Zipped</a>]<br>
+      <p>Version 2.0.1&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV201exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV201src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Numerous changes by Michael of Conexant Systems, Inc.<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Occasional combing artifacts during commercials/music videos<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Macrovision Purple Lines Fix!  Adjustable via INI file.<br>
@@ -57,8 +57,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp;&nbsp;&nbsp; Better Channel List Functionality&nbsp;<br>
       &nbsp;&nbsp;&nbsp;&nbsp; New optional blended deinterlace algorithm
       </p>
-      <p>Version 2.0.0&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV200exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme200.htm">README</a>]<br>
+      <p>Version 2.0.0&#151;<b>Stable</b>&#151;[<a href="distributions/dTV200exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] 
+        [<a href="readme/dTV_Readme200.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if
       you resize video window too small.<br>
