--- a/htdocs/user_support.htm
+++ b/htdocs/user_support.htm
@@ -48,13 +48,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         to stop by and say hello. You can post questions, bug reports, and suggestions 
         there. We suggest that you do a <a href="http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a> 
         of the forum to ensure that your item is not duplicative.</p>
-      <p>Support is given by the helpful members of the community there, whether 
-        they be involved in this project or not. However, some people that may 
-        appear often to answer user questions and who are affiliated with project 
-        include:</p>
+      <p>Support is given by the helpful members of the community, whether they 
+        be involved in this project or not. However, some people that may appear 
+        often to answer user questions and who are affiliated with project include:</p>
       <p><u>User support<br>
         </u>Mark Rejhon, the administrator of the project;<br>
-        Dan Schmelzer (dschmelzer), the webmaster;<br>
+        Dan Schmelzer (dschmelzer), developer and user support;<br>
         Yvon Quere (Yvonus), the FAQ maintainer;<br>
         Jason Castle (jcastle), the todo and bugs pages maintainer; and<br>
         (Slithy Tove), the .ini file page maintainer.</p>
