--- a/htdocs/CVS_Instructions.htm
+++ b/htdocs/CVS_Instructions.htm
@@ -86,6 +86,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         the file. Choose Modify-Update Selection from the menu. This merges your 
         local changes with the CVS code. Next, choose Modify-Commit Selection. 
         This will make the changes in the CVS.</p>
+      <p><b>Note</b>: Sourceforge has recently changed its public keys for ssh 
+        access. Cevelopers who checked out the code before this change may need 
+        to delete all instances of the file &quot;known_hosts&quot; before proceeding.</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
