Fixed links to IniFile.HTM

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -86,7 +86,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>A <a href="http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter 
         from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
         as well as Teletext and Closed-Captioning.</p>
-      <p>An explanation of the <a href="IniFile.htm">options available</a> in 
+      <p>An explanation of the <a href="IniFile.HTM">options available</a> in 
         the dTV.ini file.</p>
       <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tools</a> 
         for Windows 9x.</p>
