--- a/htdocs/setup/index.htm
+++ b/htdocs/setup/index.htm
@@ -89,7 +89,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h3><img src="setup_ar_advanced_ratios.jpg" width="544" height="404" border="2"></h3>
       <p><br>
         For more information about the advanced features available via the dTV.ini 
-        file, please see the <a href="../IniFile.htm">.ini documentation</a>. </p>
+        file, please see the <a href="../IniFile.HTM">.ini documentation</a>. </p>
       <h2><br>
         What if That Doesn't Work?</h2>
       <p> Please visit the HTPC section of the <a href="http://www.avsforum.com/"> 
