Updated website removed my email address throughout

--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -44,7 +44,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>John Adcock</h2>
       <blockquote> 
         <p>John is the founder of the project. He did huge amounts of full time 
-          development over a three-month period during a lucky work break on versions 
+          development on versions 
           1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
           and legalizing Multidec. He put into code, the world's first open-source 
           real-time 3:2 pulldown software deinterlacer (based on Mark Rejhon's 
@@ -55,8 +55,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2><br>
         Mark Rejhon</h2>
       <blockquote> 
-        <p>As of version 1.7, Mark is the project admin. He is also the moderator 
-          of the Internet's largest Home Theater Computers forum at <a href="www.avsforum.com">AVSFORUM</a>. 
+        <p> 
           Mark authored the 3:2 pulldown algorithm that forms the basis of the 
           algorithm implemented into dTV by John Adcock. He also does other programming 
           tasks like code cleanup, merging, documenting, testing, enhancing of 
