--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -40,19 +40,29 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>dTV is an open-source, <a href="http://sourceforge.net/">SourceForge</a> 
-        hosted project to create a program to deinterlace TV or Video through 
-        a computer without the need for an expensive processor box.</p>
-      <p>The spiritual home of this project is the Home Theater Computers Section 
+      <p> TV is a piece of software that grabs analog, interlaced video, and 
+        deinterlace it to make it a progressive scan feed for use on your computer 
+        monitor or projector.<p> Analog, interlaced video is what output devices like
+      VCRs, Laserdiscs, 
+        game consoles, DVD players output
+      <p> Unlike most existing software that tries to do the same, dTV implements 
+        very sophisticated algorithms to deinterlace such sources. Using such 
+        algorithms makes sure that each kind of video source is handled a different 
+        way. It provides the user with a level of image quality unknown to PC 
+        owners up to now. 
+      <p> Some of those techniques are ; 
+      <ul>
+        <li>Video source deinterlacing</li>
+        <li>inverse Telecine detection 2:2 (for PAL movies) as well as 3:2 (for
+          NTSC movies) pulldown</li>
+        <li>Filters for noise removal</li>
+      </ul>
+      <p> The image quality resulting from those complex operations is high and 
+        allows some people equipped with data capable projectors to feed them 
+        with a progressive scan source that was interlaced right before. 
+      <p>The main forum for user discussion is the Home Theater Computers Section 
         on the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AV Science 
         Forum</a>.</p>
-      <p>This project is in the early stages.&nbsp; If you are interested at all 
-        in this project then join the <a href="http://sourceforge.net/mail/?group_id=7420">Mailing 
-        List</a> and say hello.</p>
-      <p>dTV has grown out of the GPL code base of MultiDec and MoreTV, two cable 
-        descrambling programs.&nbsp; By combining the GPL parts of both and extending 
-        them both, John Adcock was able to create a new legal totally open source 
-        project.</p>
       <p>Please see the <a href="downloads.htm">downloads page</a> to download 
         the latest version.</p>
       <!-- #EndEditable --></td>
