--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -56,13 +56,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       list to keep yourself up to date!). If you think that you can take on a part 
         of one of these tasks, everyone on the mailing list would love to hear 
         from you.</p>
-      <h2></h2>
       <p>dTV is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
         the latest source zipped. The source compiles under MS Visual C++. The 
         application has grown out of the GPL code base of MultiDec and MoreTV, 
         two cable descrambling programs.&nbsp; By combining the GPL parts of both 
-        and extending them both, John Adcock was able to create a new legal totally 
+        and extending them both, we were able to create a new legal totally 
         open source project.</p>
       <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         Repository</a>.&nbsp; To get check-out and check-in access, you will need 
@@ -90,8 +89,6 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         the dTV.ini file.</p>
       <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tools</a> 
         for Windows 9x.</p>
-      <p></p>
-      <h2></h2>
       <h2> <br>
         BT848 Links</h2>
       <p><a href="http://www.conexant.com/techinfo/ShowFiles.asp?ID=108&amp;ST=C">BT848 
